--- a/index.html
+++ b/index.html
@@ -14,20 +14,18 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Carta de San Valentín</title>
+    <title>Carta Eterna de Amor</title>
   </head>
 
   <body>
-    <h1>¡Feliz San Valentín!❤️</h1>
-    <p class="psorpresa">Una pequeña sorpresa para ti...</p>
+    <h1>Esta carta vivirá para siempre, porque te amo</h1>
+    <p class="psorpresa">Una pequeña sorpresa para ti, de mi corazón eterno...</p>
 
     <div class="contenedor" id="AbrirContenedor">
       <div class="superior"></div>
       <div class="mensaje">
-        El amor está en las pequeñas cosas, en los momentos compartidos, en las
-        sonrisas y en los gestos que nos hacen sentir vivos. Hoy celebramos esos
-        detalles que hacen que el mundo sea un lugar más bonito
-        <p>Alejandro.</p>
+        El amor verdadero trasciende el tiempo, las palabras y los gestos. Esta carta permanecerá siempre, como símbolo de lo que siento por ti. Porque te amo con todo mi ser, más allá de lo que las palabras pueden decir.
+        <p>Con todo mi amor, Alejandro.</p>
       </div>
       <div class="carta">
         <i class="bx bxs-heart"></i>
