--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Carta Eterna de Amor</title>
+    <title>Mi Amor Escribe para Siempre</title>
   </head>
 
   <body>
-    <h1>Esta carta vivirá para siempre, porque te amo</h1>
-    <p class="psorpresa">Una pequeña sorpresa para ti, de mi corazón eterno...</p>
+    <h1>¡Para Jukary!❤️</h1>
+    <p class="psorpresa">Una pequeña sorpresa para ti...</p>
 
     <div class="contenedor" id="AbrirContenedor">
       <div class="superior"></div>
       <div class="mensaje">
-        El amor verdadero trasciende el tiempo, las palabras y los gestos. Esta carta permanecerá siempre, como símbolo de lo que siento por ti. Porque te amo con todo mi ser, más allá de lo que las palabras pueden decir.
-        <p>Con todo mi amor, Alejandro.</p>
+        No importa cuánto tiempo pase, esta carta seguirá aquí para recordarte lo que siento.
+        Porque mi amor por ti no tiene fecha de caducidad. Es profundo, es sincero, y es para siempre.  
+        <p>Antonio.</p>
       </div>
       <div class="carta">
         <i class="bx bxs-heart"></i>
